--- a/ribbit-front/package.json
+++ b/ribbit-front/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "babel-eslint": "9.0.0",
+    "eslint": "5.6.0",
     "react": "^16.6.3",
     "react-cookies": "^0.1.0",
     "react-dom": "^16.6.3",
@@ -30,7 +32,6 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "eslint": "5.6.0",
     "prettier-eslint": "^8.8.2",
     "webpack-cli": "^3.1.2"
   }
