--- a/ribbit-front/.eslintrc
+++ b/ribbit-front/.eslintrc
@@ -1,33 +1,22 @@
 {
   "parser": "babel-eslint",
-  "extends": ["react", "jsx-a11y", "import"],
-  "plugins": ["react"],
+  "extends": "airbnb",
+  "plugins": ["react", "jsx-a11y", "import"],
+  "env": {
+    "browser": true,
+    "node": true
+  },
   "rules": {
-    "indent": ["error", 2],
-    "react/jsx-filename-extension": 0,
-    "space-in-parens": [0, "always"],
-    "template-curly-spacing": [2, "always"],
-    "array-bracket-spacing": [2, "always"],
-    "object-curly-spacing": [2, "always"],
-    "computed-property-spacing": [2, "always"],
-    "no-multiple-empty-lines": [2, { "max": 1, "maxEOF": 0, "maxBOF": 0 }],
-    "quotes": [1, "single", "avoid-escape"],
-    "no-use-before-define": [2, { "functions": false }],
-    "semi": [0, "never"],
-    "prefer-const": 1,
-    "react/prefer-es6-class": 0,
-    "react/jsx-filename-extension": 0,
-    "react/jsx-curly-spacing": [2, "always"],
-    "react/jsx-indent": [2, 4],
-    "react/prop-types": [1],
-    "react/no-array-index-key": [1],
-    "class-methods-use-this": [1],
-    "no-undef": [1],
-    "no-case-declarations": [1],
-    "no-return-assign": [1],
-    "no-param-reassign": [1],
-    "no-shadow": [1],
-    "camelcase": [1],
-    "no-underscore-dangle": [0, "always"]
+    "react/prefer-es6-class": 1,
+    "react/prefer-stateless-function": 1,
+    "react/no-multi-comp": 1,
+    "react/display-name": 1,
+    "react/jsx-pascal-case": 0,
+    "react/jsx-boolean-value": 1,
+    "react/no-string-refs": 0,
+    "linebreak-style": 0,
+    "react/destructuring-assignment": 0,
+    "jsx-a11y/click-events-have-key-events": 0,
+    "jsx-a11y/no-static-element-interactions": 0
   }
 }
