--- a/ribbit-front/.eslintrc
+++ b/ribbit-front/.eslintrc
@@ -17,6 +17,7 @@
     "linebreak-style": 0,
     "react/destructuring-assignment": 0,
     "jsx-a11y/click-events-have-key-events": 0,
-    "jsx-a11y/no-static-element-interactions": 0
+    "jsx-a11y/no-static-element-interactions": 0,
+    "react/prop-types": 0
   }
 }
