--- a/ribbit-front/.eslintrc
+++ b/ribbit-front/.eslintrc
@@ -7,8 +7,11 @@
     "node": true
   },
   "rules": {
+    "jsx-a11y/no-noninteractive-element-interactions": 0,
     "no-shadow": 0,
     "eslint no-alert": 0,
+    "no-alert": 0,
+    "eslint/no-alert": 0,
     "no-unused-vars": 0,
     "react/no-unused-state": 0,
     "react/prefer-es6-class": 1,
