--- a/ribbit-front/.eslintrc
+++ b/ribbit-front/.eslintrc
@@ -7,6 +7,7 @@
     "node": true
   },
   "rules": {
+    "react/jsx-one-expression-per-line": 0,
     "no-param-reassign": 0,
     "jsx-a11y/no-noninteractive-element-interactions": 0,
     "no-shadow": 0,
