--- a/ribbit-front/.eslintrc
+++ b/ribbit-front/.eslintrc
@@ -14,6 +14,7 @@
     "eslint no-alert": 0,
     "no-alert": 0,
     "eslint/no-alert": 0,
+    "no-useless-escape": 0,
     "no-unused-vars": 0,
     "react/no-unused-state": 0,
     "react/prefer-es6-class": 1,
