--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "create-react-app": "^2.1.1",
     "eslint": "5.6.0",
     "eslint-config-airbnb": "^17.1.0",
+    "query-string": "^6.2.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "redux": "^4.0.1"
