--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "query-string": "^6.2.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-infinite-scroller": "^1.2.4",
     "redux": "^4.0.1"
   },
   "devDependencies": {
