--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-eslint": "9.0.0",
     "create-react-app": "^2.1.1",
     "eslint": "5.6.0",
