--- a/ribbit-front/package.json
+++ b/ribbit-front/package.json
@@ -46,6 +46,7 @@
     "react-cookies": "^0.1.0",
     "react-dev-utils": "^6.1.1",
     "react-dom": "^16.6.3",
+    "react-infinite-scroller": "^1.2.4",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
